@startuml

title __INHERITANCE's Class Diagram__\n

  package inheritance {
    class Main {
        {static} + main()
    }
  }
  

  package inheritance {
    class airplane {
        - maxHeight : int
        + airplane()
        + setMaxHeight()
        + getMaxHeight()
    }
  }
  

  package inheritance {
    class car {
        - numOfPass : int
        - typeOfRadio : String
        + car()
        ~ printSpeed()
        ~ setNumOfPass()
        ~ setTypeOfRadio()
        + getNumOfPass()
        + getTypeOfRadio()
    }
  }
  

  package inheritance {
    class vehicle {
        ~ topSpeed : int
        - color : String
        + vehicle()
        ~ setTopSpeed()
        + setColor()
        + getTopSpeed()
        + getColor()
    }
  }
  

  airplane -up-|> vehicle
  car -up-|> vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
